# kube-learning

./: .dockerignore  Dockerfile  build.sh  init.sql   kube.sh  main.py  notes.md  pyproject.toml  test.py
k8s_manifests/: app_service.yml  config_map.yml  flask-test-app.yml  pv.yml  pvc.yaml
src/: app.py  config.py  model.py
