[project]
name = "kube-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "ipykernel>=7.2.0",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]

[tool.uv.workspace]
members = [
    "test-2",
]
